--- a/res/xml/qwerty.xml
+++ b/res/xml/qwerty.xml
@@ -8,10 +8,10 @@
     >
     
     <Row>
-        <Key android:codes="4325" android:keyLabel="ქ" android:popupCharacters="1" android:keyEdgeFlags="left"/>
-        <Key android:codes="4332" android:keyLabel="წ" android:popupCharacters="2"/>
-        <Key android:codes="4308" android:keyLabel="ე" android:popupCharacters="3"/>
-        <Key android:codes="4320" android:keyLabel="რ" android:popupCharacters="4"/>
+        <Key android:codes="4325" android:keyLabel="ქ" android:popupCharacters="1q" android:keyEdgeFlags="left"/>
+        <Key android:codes="4332" android:keyLabel="წ" android:popupCharacters="2w"/>
+        <Key android:codes="4308" android:keyLabel="ე" android:popupCharacters="3e"/>
+        <Key android:codes="4320" android:keyLabel="რ" android:popupCharacters="4r"/>
         <Key android:codes="4326" android:keyLabel="ღ" android:popupCharacters="5"/>
         <Key android:codes="4322" android:keyLabel="ტ" android:popupCharacters="6"/>
         <Key android:codes="4311" android:keyLabel="თ" android:popupCharacters="7"/>
